--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,7 @@ Repository = "https://github.com/Sharrrkkk/game_solver_lib"
 Issues = "https://github.com/Sharrrkkk/game_solver_lib/issues"
 
 [project.scripts]
-wordfinder = "gamesolverlib.WordFinder:word_finder"
-wordfindertest = "gamesolverlib:_wordfinder_test"
+wordfindertest = "gamesolverlib.wordfinder_lib.wordfinder:_wordfinder_test"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
@@ -43,4 +42,4 @@ package-dir = {"" = "src"}
 where = ["src"]
 
 [tool.setuptools.package-data]
-gamesolverlib = ["word_files/*", "info/*", "test_logs/*"]
+gamesolverlib = ["wordfinder_lib/word_files/*", "wordfinder_lib/info/*", "wordfinder_lib/test_logs/*"]
