Modify the README.md file to make some improvements and include more information. Modify the library folder inside the package with _ to ensure it is not used when importing the package, modules, classes, etc. Modify the wordfinder.py module to improve internal typing. Modify the __about__.py file to add typing. Modify the __init__.py file to __all__. Create the __init__.pyi file with a mypy tool so that IDEs or VScode with linters and other tools in strict typing mode do not report errors. Pass all tests with mypy and pyright from pylance, both in strict mode. Generate a package with build, setuptools, and upload it with Twine. Verify that the package installed from PYPI works perfectly on both Linux and Windows.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ Repository = "https://github.com/Sharrrkkk/game_solver_lib"
 Issues = "https://github.com/Sharrrkkk/game_solver_lib/issues"
 
 [project.scripts]
-wordfindertest = "gamesolverlib.wordfinder_lib.wordfinder:_wordfinder_test"
+wordfindertest = "gamesolverlib._wordfinder_lib.wordfinder:_wordfinder_test"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
@@ -42,4 +42,4 @@ package-dir = {"" = "src"}
 where = ["src"]
 
 [tool.setuptools.package-data]
-gamesolverlib = ["wordfinder_lib/word_files/*", "wordfinder_lib/info/*", "wordfinder_lib/test_logs/*"]
+gamesolverlib = ["_wordfinder_lib/word_files/*", "_wordfinder_lib/info/*", "_wordfinder_lib/test_logs/*"]
